--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css'
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap')
+
+body
+    font-family: 'Roboto Condensed', sans-serif
+    margin: 0px
