--- a/src/app/components/dragons/list-dragons/list-dragons.component.html
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.html
@@ -1,1 +1,3 @@
-<p>list-dragons works!</p>
+<div class="transform col-md-3">
+    <div class="icon"><fa-icon [icon]="faDragon"></fa-icon></div>
+</div>
