--- a/src/app/components/shared/header/header.component.sass
+++ b/src/app/components/shared/header/header.component.sass
@@ -7,6 +7,7 @@ header
 .header-web
     display: flex
     font-size: $font-header
+    margin-bottom: 40px
     padding: 10px
     a
         color: white
