changes in component

--- a/src/app/components/dragons/list-dragons/list-dragons.component.sass
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.sass
@@ -1,4 +1,28 @@
 .transform
     border: 2px solid
+    margin-bottom: 20px
+    /* transform: skew(-20deg); */
+    min-height: 350px
     text-align: center
-    // transform: skew(-20deg)
+    .icon
+        font-size: 100px
+        padding: 15px
+    .id
+        background-color: black
+        color: white
+        left: 20px
+        /* border-radius: 5px; */
+        padding: 2px 5px
+        position: absolute
+        top: 5px
+    .characteristics
+        display: flex
+        .item
+            flex: 1
+            .title
+                font-weight: 700
+            .info
+                .element
+                    margin: auto
+                    width: 50%                
+        
