--- a/src/app/components/dragons/list-dragons/list-dragons.component.sass
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.sass
@@ -25,4 +25,11 @@
                 .element
                     margin: auto
                     width: 50%                
-        
+    .buttons
+        display: flex
+        margin: 10px auto 0px auto
+        width: 50%
+        .item
+            flex: 1
+            .btn
+                border-radius: 0px
