new modal for edit

--- a/src/app/components/dragons/list-dragons/list-dragons.component.html
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.html
@@ -21,7 +21,7 @@
             </div>
             <div class="buttons">
                 <div class="item">
-                    <button class="btn btn-primary"><fa-icon [icon]="faPen"></fa-icon></button>
+                    <button class="btn btn-primary" (click)="openEditModal(dragon)"><fa-icon [icon]="faPen"></fa-icon></button>
                 </div>
                 <div class="item">
                     <button class="btn btn-danger"><fa-icon [icon]="faTrash"></fa-icon></button>
