--- a/src/app/components/dragons/edit-dragons/edit-dragons.component.html
+++ b/src/app/components/dragons/edit-dragons/edit-dragons.component.html
@@ -1,1 +1,32 @@
-<p>edit-dragons works!</p>
+<mat-dialog-actions>
+    <form [formGroup]="editForm">
+        <div class="row">
+            <div class="col-xs-12 col-md-6">
+                <mat-form-field>
+                    <input matInput type="text" placeholder="Name" id="name" name="name" formControlName="name">
+                    <mat-error *ngIf="editForm?.controls['name']?.errors?.required">
+                        <strong>Name is required</strong>
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <mat-form-field>
+                    <input matInput type="text" placeholder="Type" id="type" name="type" formControlName="type">
+                    <mat-error *ngIf="editForm?.controls['type']?.errors?.required">
+                        <strong>Type is required</strong>
+                    </mat-error>
+                </mat-form-field>
+            </div>
+            <div class="col-12 text-center">
+                <mat-form-field>
+                    <input matInput type="text" placeholder="History" id="histories" name="histories" formControlName="histories" value="">
+                </mat-form-field>
+            </div>
+            <div *ngIf="dragonHistories?.length > 0">
+                <div *ngFor="let history of dragonHistories">
+                    <p>{{history}}</p>
+                </div>
+            </div>
+        </div>
+    </form>
+</mat-dialog-actions>
