--- a/src/app/components/dragons/list-dragons/list-dragons.component.html
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.html
@@ -24,7 +24,7 @@
                     <button class="btn btn-primary" (click)="openEditModal(dragon)"><fa-icon [icon]="faPen"></fa-icon></button>
                 </div>
                 <div class="item">
-                    <button class="btn btn-danger"><fa-icon [icon]="faTrash"></fa-icon></button>
+                    <button class="btn btn-danger" (click)="openDeleteModal(dragon)"><fa-icon [icon]="faTrash"></fa-icon></button>
                 </div>
             </div>
         </div>
