--- a/src/app/components/dragons/list-dragons/list-dragons.component.html
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.html
@@ -1,24 +1,26 @@
 <div class="row">
     <div class="col-md-3" *ngFor="let dragon of dragons">
         <div class="transform">
-            <div class="icon"[ngStyle]="{'color': dragon.color}"><fa-icon [icon]="faDragon"></fa-icon></div>
-            <div class="id" [ngStyle]="{'background-color': dragon.color}">{{dragon.id}}</div>
-            <div class="characteristics">
-                <div class="item">
-                    <div class="title">Name</div>
-                    <div class="info">{{dragon.name}}</div>
+            <a [routerLink]="['/dragon/'+ dragon?.id]">
+                <div class="icon"[ngStyle]="{'color': dragon.color}"><fa-icon [icon]="faDragon"></fa-icon></div>
+                <div class="id" [ngStyle]="{'background-color': dragon.color}">{{dragon.id}}</div>
+                <div class="characteristics">
+                    <div class="item">
+                        <div class="title">Name</div>
+                        <div class="info">{{dragon.name}}</div>
+                    </div>
+                    <div class="item">
+                        <div class="title">Type</div>
+                        <div class="info">{{dragon.type}}</div>
+                    </div>
                 </div>
-                <div class="item">
-                    <div class="title">Type</div>
-                    <div class="info">{{dragon.type}}</div>
+                <div class="characteristics mt-2">
+                    <div class="item">
+                        <div class="title">Created At</div>
+                        <div class="info">{{dragon.createdAt | date: 'dd/MM/yyyy'}}</div>
+                    </div>
                 </div>
-            </div>
-            <div class="characteristics mt-2">
-                <div class="item">
-                    <div class="title">Created At</div>
-                    <div class="info">{{dragon.createdAt | date: 'dd/MM/yyyy'}}</div>
-                </div>
-            </div>
+            </a>
             <div class="buttons">
                 <div class="item">
                     <button class="btn btn-primary" (click)="openEditModal(dragon)"><fa-icon [icon]="faPen"></fa-icon></button>
