--- a/src/app/components/dragons/list-dragons/list-dragons.component.sass
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.sass
@@ -4,27 +4,30 @@
     /* transform: skew(-20deg); */
     min-height: 350px
     text-align: center
-    .icon
-        font-size: 100px
-        padding: 15px
-    .id
-        background-color: black
-        color: white
-        left: 20px
-        /* border-radius: 5px; */
-        padding: 2px 5px
-        position: absolute
-        top: 5px
-    .characteristics
-        display: flex
-        .item
-            flex: 1
-            .title
-                font-weight: 700
-            .info
-                .element
-                    margin: auto
-                    width: 50%                
+    a
+        color: black
+        text-decoration: none
+        .icon
+            font-size: 100px
+            padding: 15px
+        .id
+            background-color: black
+            color: white
+            left: 20px
+            /* border-radius: 5px; */
+            padding: 2px 5px
+            position: absolute
+            top: 5px
+        .characteristics
+            display: flex
+            .item
+                flex: 1
+                .title
+                    font-weight: 700
+                .info
+                    .element
+                        margin: auto
+                        width: 50%                
     .buttons
         display: flex
         margin: 10px auto 0px auto
