--- a/src/app/components/shared/header/header.component.sass
+++ b/src/app/components/shared/header/header.component.sass
@@ -1,8 +1,9 @@
 $font-header: 25px
     
 header
-    background-color: black
+    background-color: #6f1280
     color: white
+    box-shadow: 0 -1px 0 #e5e5e5, 0 0 2px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.24)
 
 .header-web
     display: flex
