--- a/src/app/components/dragons/create-dragons/create-dragons.component.html
+++ b/src/app/components/dragons/create-dragons/create-dragons.component.html
@@ -1,1 +1,56 @@
-<p>create-dragons works!</p>
+<div class="form">
+    <mat-card>
+        <form [formGroup]="createForm">
+            <div class="row">
+                <div class="col-xs-12 col-md-6">
+                    <mat-form-field>
+                        <input matInput type="text" placeholder="Name" id="name" name="name" formControlName="name">
+                        <mat-error *ngIf="createForm?.controls['name']?.errors?.required">
+                            <strong>Name is required</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-xs-12 col-md-6">
+                    <mat-form-field>
+                        <input matInput type="text" placeholder="Type" id="type" name="type" formControlName="type">
+                        <mat-error *ngIf="createForm?.controls['type']?.errors?.required">
+                            <strong>Type is required</strong>
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+                <div class="col-10 text-center">
+                    <mat-form-field>
+                        <input matInput type="text" placeholder="History" id="histories" name="histories" formControlName="histories" value="">
+                    </mat-form-field>
+                </div>
+                <div class="col-2 text-center">
+                    <button class="btn btn-success" (click)="newHistory()">+</button>
+                </div>
+                <div class="col-12">
+                    <mat-expansion-panel (opened)="panelOpenState = true"
+                            (closed)="panelOpenState = false"
+                            [disabled]="dragonHistories?.length === 0">
+                        <mat-expansion-panel-header>
+                            <mat-panel-title *ngIf="dragonHistories?.length === 0; else histories">
+                                No histories found.
+                            </mat-panel-title>
+                            <ng-template #histories>
+                                <mat-panel-title>
+                                    Histories
+                                </mat-panel-title>
+                            </ng-template>
+                        </mat-expansion-panel-header>
+                        <div *ngIf="dragonHistories?.length > 0">
+                            <div *ngFor="let history of dragonHistories; let index = index">
+                                <p>{{index}}. {{history}}</p>
+                            </div>
+                        </div>
+                    </mat-expansion-panel>
+                </div>
+                <div class="button button-web col-12">
+                    <button class="btn btn-success" mat-button type="submit" (click)="createDragon()" [disabled]="!createForm.valid">Save</button>
+                </div>
+            </div>
+        </form>
+    </mat-card>
+</div>
