--- a/src/app/components/dragons/list-dragons/list-dragons.component.html
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.html
@@ -3,7 +3,7 @@
         <div>
             <button matTooltip="Add new Dragon"
                     [matTooltipPosition]="positionTooltip" 
-                    [routerLink]="['/dragons/create']" 
+                    [routerLink]="['/dragon/create']" 
                     type="button" 
                     class="btn btn-success btn-circle col-4"
             >
