--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -18,7 +18,7 @@
                     </mat-error>
                 </mat-form-field>
                 <div class="button col-12">
-                    <button mat-button color="primary" class="btn btn-primary" (click)="login()" [disabled]="!loginForm.valid">Enter</button>
+                    <button mat-button color="primary" class="btn btn-primary" (click)="login()">Enter</button>
                 </div>
             </form>
         </mat-card-content>
