--- a/src/styles.sass
+++ b/src/styles.sass
@@ -5,3 +5,9 @@
 body
     font-family: 'Roboto Condensed', sans-serif
     margin: 0px
+
+.alert-snackbar
+    background-color: #b80b17
+    color: white
+    .mat-simple-snackbar-action
+        color: white
