--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-web container">
         <div class="home">
-            <a href="/"><fa-icon [icon]="faHome"></fa-icon></a>
+            <a [routerLink]="['/dragons']"><fa-icon [icon]="faHome"></fa-icon></a>
             
         </div>
         <div class="menu">
