changes in style

--- a/src/app/components/dragons/about-dragon/about-dragon.component.html
+++ b/src/app/components/dragons/about-dragon/about-dragon.component.html
@@ -32,6 +32,9 @@
                     </div>
                 </div>
             </mat-expansion-panel>
+            <div class="button text-right mt-2">
+                <button class="btn btn-secondary" (click)="previousPage()">Return</button>
+            </div>
         </div>
     </mat-card>
 </div>
