--- a/src/app/components/dragons/list-dragons/list-dragons.component.html
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.html
@@ -1,5 +1,5 @@
 <div class="list-dragons">
-    <div class="buttons col-12">
+    <div class="buttons">
         <div>
             <button matTooltip="Add new Dragon"
                     [matTooltipPosition]="positionTooltip" 
