--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -1,24 +1,25 @@
 <div class="login">
-    <mat-card>
-        <mat-card-header>
+    <mat-card class="form col-12 col-md-6">
+        <mat-card-header >
             <mat-card-title>Login</mat-card-title>
         </mat-card-header>
+        <div class="text-center icon"><fa-icon [icon]="faUser"></fa-icon></div>
         <mat-card-content>
             <form [formGroup]="loginForm">
-                <mat-form-field class="col-6">
+                <mat-form-field class="col-12">
                     <input matInput type="email" placeholder="Email" id="email" name="email" formControlName="email">
                     <mat-error *ngIf="loginForm.controls['email'].errors?.required">
                         <strong>Email is required</strong>
                     </mat-error>
                 </mat-form-field>
-                <mat-form-field class="col-6">
+                <mat-form-field class="col-12">
                     <input matInput type="password" placeholder="Password" id="password" name="password" formControlName="password">
                     <mat-error *ngIf="loginForm.controls['password'].errors?.required">
                         <strong>Password is required</strong>
                     </mat-error>
                 </mat-form-field>
                 <div class="button col-12">
-                    <button mat-button color="primary" class="btn btn-primary" (click)="login()">Enter</button>
+                    <button class="btn btn-success" (click)="login()">Login</button>
                 </div>
             </form>
         </mat-card-content>
