--- a/src/app/components/login/login/login.component.sass
+++ b/src/app/components/login/login/login.component.sass
@@ -1,3 +1,11 @@
 .login
-    .button
-        text-align: right
+    margin-top: 80px
+    .form
+        margin: auto
+        .icon
+            font-size: 50px
+        .button
+            text-align: right
+
+::ng-deep .mat-card-header-text
+    margin: 0 auto !important
