--- a/src/styles.sass
+++ b/src/styles.sass
@@ -11,3 +11,14 @@ body
     color: white
     .mat-simple-snackbar-action
         color: white
+
+.btn-add
+    background-color: white
+    border: 1px solid
+    border-radius: 4px
+    color: #28a745
+    padding-top: 10px
+    width: 100%
+    &:hover
+        background-color: #28a745
+        color: white
