snackbar added in component

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -12,6 +12,12 @@ body
     .mat-simple-snackbar-action
         color: white
 
+.success-snackbar
+    background-color: #28a745
+    color: white
+    .mat-simple-snackbar-action
+        color: white
+
 .btn-add
     background-color: white
     border: 1px solid
