new global styles

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -28,3 +28,12 @@ body
     &:hover
         background-color: #28a745
         color: white
+
+.btn-warning
+    background-color: #6f1280
+    border: #6f1280
+    color: white
+    &:hover
+        background-color: #a633bb
+        border: #a633bb
+        color: white
