--- a/src/app/components/dragons/list-dragons/list-dragons.component.html
+++ b/src/app/components/dragons/list-dragons/list-dragons.component.html
@@ -1,4 +1,7 @@
 <div class="list-dragons">
+    <div class="loading">
+        <mat-spinner *ngIf="showSpinner"></mat-spinner>
+    </div>
     <div class="buttons">
         <div>
             <button matTooltip="Add new Dragon"
