--- a/src/styles.sass
+++ b/src/styles.sass
@@ -37,3 +37,10 @@ body
         background-color: #a633bb
         border: #a633bb
         color: white
+
+.loading
+    left: 50%
+    position: fixed
+    top: 50%
+    transform: translate(-50%, -50%)
+    z-index: 9999
