--- a/src/app/components/dragons/about-dragon/about-dragon.component.html
+++ b/src/app/components/dragons/about-dragon/about-dragon.component.html
@@ -1,3 +1,6 @@
+<div class="loading">
+    <mat-spinner *ngIf="showSpinner"></mat-spinner>
+</div>
 <div *ngIf="dragon">
     <mat-card class="dragon-card">
         <div class="item">
